Fix panel resize handle covering the entire remaining window width

--- a/grid-items/_panel.scss
+++ b/grid-items/_panel.scss
@@ -6,7 +6,8 @@
     border-color: var(--colorBorder);
 
     &.overlay {
-      position: static; // overrides position: absolute on #panels-container.overlay set by the browser
+      position: relative; // overrides position: absolute on #panels-container.overlay set by the browser
+      inset: 0;
     }
   }
 }
